--- a/DMX512_analyzator/DMX512_analyzator.csproj
+++ b/DMX512_analyzator/DMX512_analyzator.csproj
@@ -8,7 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="audio-input-xlr-icon.png" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="System.IO.Ports" Version="7.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="audio-input-xlr-icon.png" />
   </ItemGroup>
 
 </Project>
